Opened 17 years ago
Closed 17 years ago
#1367 closed bug (fixed)
Shapes are drawn at incorrect location with BPictures
Reported by: | jackburton | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/app_server | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Launch PictureTest. Shapes (the lion, or the shape drawn on the top in the other window) are drawn correctly. Now move around the windows, so that the views are invalidated. Looks like the shape is always rendered at the same position relative to the screen, and not relative to the view.
Change History (2)
comment:1 by , 17 years ago
Component: | Kits/Interface Kit → Servers/app_server |
---|
comment:2 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
fixed in 21855. Tested under qemu with PictureTest demo.
Note:
See TracTickets
for help on using tickets.
Changing component, maybe stippi has some idea...